2003-03-22  Kevin Kenny  <kennykb@acm.org>

	* library/dde/pkgIndex.tcl:
	* library/reg/pkgIndex.tcl: Fixed a bug where [package require dde]
	or [package require registry] attempted to load the release version
	of the DLL into a debug build. [Bug 708218] Thanks to Joe Mistachkin
	for the patch.
	* win/makefile.vc: Added quoting around the script name in the
	'test' target; Joe Mistachkin insists that he has a configuration
	that fails to launch tcltest without it, and it appears harmless 
	otherwise.
	
2003-03-20  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclInt.h (tclOriginalNotifier):
        * generic/tclStubInit.c (tclOriginalNotifier):
        * mac/tclMacNotify.c (Tcl_SetTimer,Tcl_WaitForEvent):
        * unix/tclUnixNotfy.c (Tcl_SetTimer,Tcl_WaitForEvent,
                Tcl_CreateFileHandler,Tcl_DeleteFileHandler):
        * win/tclWinNotify.c (Tcl_SetTimer,Tcl_WaitForEvent):  Some linkers
        apparently use a different representation for a pointer to a function
        within the same compilation unit and a pointer to a function in a
        different compilation unit.  This causes checks like those in the
        original notifier procedures to fall into infinite loops.  The fix
        is to store pointers to the original notifier procedures in a struct
        defined in the same compilation unit as the stubs tables, and compare
        against those values.  [Bug 707174]

	* generic/tclInt.h:  Removed definition of ParseValue struct that
	is no longer used.

2003-03-19  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* tests/compile.test: bad command count on TCL_OUT_LINE_COMPILE
	[Bug 705406] (Don Porter).

2003-03-19  Don Porter  <dgp@users.sourceforge.net>

	* doc/Eval.3 (Tcl_EvalObjEx):			Corrected CONST and
	* doc/ParseCmd.3 (Tcl_EvalTokensStandard):	return type errors
	in documentation.  [Bug 683994]

2003-03-18  Kevin Kenny  <kennykb@users.sourceforge.net>
