@@ -1,3 +1,10 @@
+2003-03-24  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclVar.c:
+	* tests/var.test: fixing ObjMakeUpvar's lookup algorithm for the
+	created local variable, bugs #631741 (Chris Darroch) and #696893
+	(David Hilker). 
+
 2003-03-22  Kevin Kenny  <kennykb@acm.org>
 
 	* library/dde/pkgIndex.tcl:
